# simple-synth

./: .gitignore  CI_CD_IMPLEMENTATION.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SimpleSynth.jucer  cmake_install.cmake  index.html  windows-toolchain.cmake
.github/: ci-cd-juce.yml
.github/workflows/: build-releases.yml
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
SimpleSynth_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
Source/: BypassComponent.cpp  BypassComponent.h  Chorus.cpp  Chorus.h  Crunch.cpp  Crunch.h  CustomOscillator.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Limiter.cpp  Limiter.h  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetPanel.cpp  PresetPanel.h  ReverbComponent.cpp  ReverbComponent.h  SynthSound.h  SynthVoice.h
basics/include/signalsmith-basics/: chorus.h  crunch.h  freq-shifter.h  limiter.h  reverb.h
basics/include/stfx/: stfx-library.h
